perf:Optimize schematic preview loading and model extraction